<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            tools:context=".ui.home.fragments.EverythingFragment">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_everything"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_search_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:queryHint="Search" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_from"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_border_btn"
                android:fontFamily="@font/museosansr"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/from"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sv_everything" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_to"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_border_btn"
                android:fontFamily="@font/museosansr"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/to"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/btn_from"
                app:layout_constraintTop_toBottomOf="@id/sv_everything" />

            <TextView
                android:id="@+id/tv_sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/museosansr"
                android:text="@string/sort_by"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_down_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sv_everything" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_calendarView"
                android:layout_width="250dp"
                android:layout_height="270dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_from">

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkgrey" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_try_searching"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_from">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/museosanssb"
                    android:text="@string/try_searching"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/museosansr"
                    android:text="@string/eminem"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/museosansr"
                    android:text="@string/virat_kohli"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/museosansr"
                    android:text="@string/india"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_everything"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="12dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_from"
                tools:listitem="@layout/layout_news_card_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>