<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sort_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_margin="10dp"
        android:background="@color/black"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_relevance"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@color/darkgrey"
                android:fontFamily="@font/museosansr"
                android:gravity="center"
                android:text="@string/relevance"
                android:textAllCaps="false"
                android:textColor="@color/magenta"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey600" />

            <TextView
                android:id="@+id/tv_newest"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@color/darkgrey"
                android:fontFamily="@font/museosansr"
                android:gravity="center"
                android:text="@string/newest"
                android:textAllCaps="false"
                android:textColor="@color/magenta"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey600" />

            <TextView
                android:id="@+id/tv_popularity"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@color/darkgrey"
                android:fontFamily="@font/museosansr"
                android:gravity="center"
                android:text="@string/popularity"
                android:textAllCaps="false"
                android:textColor="@color/magenta"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>