<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.aman.newsapp.models.response.SourceDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/darkgrey"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_border_btn">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    tools:text="@string/name"
                    android:text="@{data.name}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/museosanssb"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    tools:text="@string/description"
                    android:text="@{data.description}"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:maxLines="3"
                    android:fontFamily="@font/museosansr"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    app:layout_constraintStart_toStartOf="parent"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        tools:text="@string/category"
                        android:text='@{"Category : "+data.category}'
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/museosansr"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:alpha="0.8"
                        tools:text="@string/language_en"
                        android:text='@{"Language : "+data.language}'
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/museosansr"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        tools:text="@string/country_us"
                        android:text='@{"Country : "+data.country}'
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/museosansr"
                        tools:ignore="SmallSp" />

                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>